# veda_birthday_agent

./: .gcloudignore  .gitignore  Dockerfile  app.py  dockerfile  pyproject.toml  readMe.md  test_agent_bot.py
chroma_db/: chroma.sqlite3
rag_agent/: chain.py  config.py  generator.py  history_store.py  prompts.py
scripts/: delete.py  export_chroma_docs.py  ingest.py
static/: chat.js  style.css
templates/: index.html
tests/: test_agent.py
