[project]
name = "veda-birthday-agent"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "langchain==0.3.27",
    "langchain-openai==0.3.35",
    "langchain-chroma==0.2.6",
    "chromadb==1.0.20",
    "openai==1.107.0",
    "gradio>=6.17.3",
    "langchain-core>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-text-splitters>=0.3,<0.4",
    "python-dotenv>=1.0.1",
]